--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
    <application
         android:label="first_app"
         android:icon="@mipmap/ic_launcher">
+        <meta-data android:name="com.google.android.geo.API_KEY"
+           android:value="AIzaSyCMLOlGiOu_5Wh6cKlTcLAP8833OCxhllU"/>
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
